--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.WeBlogger"
         tools:targetApi="31">
         <activity
+            android:name=".EditBlogActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MyBlogsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SavedBlogsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReadBlogActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddBlogActivity"
             android:exported="false" />
         <activity
